--- a/package.json
+++ b/package.json
@@ -18,7 +18,12 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "html-to-pdfmake": "^2.4.0",
     "jspdf": "^2.5.1",
+    "ng2-pdf-viewer": "^9.0.0",
+    "ngx-extended-pdf-viewer": "^13.5.2",
+    "pdfmake": "^0.2.5",
+    "pdfmake-unicode": "^0.0.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
@@ -29,6 +34,7 @@
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
     "@types/jspdf": "^2.0.0",
+    "@types/pdfmake": "^0.1.21",
     "jasmine-core": "~4.1.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
